; ModuleID = '/home/carl/AnghaBench/openssl/apps/extr_smime.c_smime_cb.c'
source_filename = "/home/carl/AnghaBench/openssl/apps/extr_smime.c_smime_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@X509_V_ERR_NO_EXPLICIT_POLICY = common dso_local global i32 0, align 4
@X509_V_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32*)* @smime_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @smime_cb(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  %7 = load i32*, i32** %5, align 8
  %8 = call i32 @X509_STORE_CTX_get_error(i32* %7)
  store i32 %8, i32* %6, align 4
  %9 = load i32, i32* %6, align 4
  %10 = load i32, i32* @X509_V_ERR_NO_EXPLICIT_POLICY, align 4
  %11 = icmp ne i32 %9, %10
  br i1 %11, label %12, label %21

12:                                               ; preds = %2
  %13 = load i32, i32* %6, align 4
  %14 = load i32, i32* @X509_V_OK, align 4
  %15 = icmp ne i32 %13, %14
  br i1 %15, label %19, label %16

16:                                               ; preds = %12
  %17 = load i32, i32* %4, align 4
  %18 = icmp ne i32 %17, 2
  br i1 %18, label %19, label %21

19:                                               ; preds = %16, %12
  %20 = load i32, i32* %4, align 4
  store i32 %20, i32* %3, align 4
  br label %25

21:                                               ; preds = %16, %2
  %22 = load i32*, i32** %5, align 8
  %23 = call i32 @policies_print(i32* %22)
  %24 = load i32, i32* %4, align 4
  store i32 %24, i32* %3, align 4
  br label %25

25:                                               ; preds = %21, %19
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local i32 @X509_STORE_CTX_get_error(i32*) #1

declare dso_local i32 @policies_print(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
